testsuite/tests/parser/should_compile/read022.hs
{-# LANGUAGE ScopedTypeVariables #-}
module ShouldCompile where

f (x :: Int) = x + 1
