testsuite/tests/parser/should_fail/OrPatInExprErr.hs
{-# LANGUAGE OrPatterns #-}

module OrPatInExprErr where

x = (True; False)
